[project]
name = "ctm-pytorch-advi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.27",
    "tensorboard>=2.16.2",
    "matplotlib>=3.10.5",
    "spacy>=3.7.5",
]
