[project]
name = "ctm-pytorch-advi"
version = "0.1.3"
description = "Correlated Topic Model (CTM) with ADVI in PyTorch: training, inference, and utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Anugrah Vaishnav" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=2.2.6",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.27",
    "tensorboard>=2.16.2",
    "matplotlib>=3.10.5",
    "spacy>=3.7.5",
]

license = { text = "MIT" }

[project.scripts]
ctm-train = "ctm.train:main"
ctm-infer = "ctm.infer:main"
ctm-export-topics = "scripts.export_topics:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctm", "src/scripts"]

[project.urls]
Homepage = "https://pypi.org/project/ctm-pytorch-advi/"
